format + polishing